@@ -5,13 +5,17 @@
  */
 package lendle.courses.wp.containers;
 
+import com.sun.java.swing.plaf.windows.resources.windows;
 import java.awt.BorderLayout;
+import java.awt.JobAttributes;
+import java.io.File;
 import java.net.URL;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import javax.swing.ImageIcon;
 import javax.swing.JFrame;
 import javax.swing.JLabel;
+import javax.swing.JProgressBar;
 import javax.swing.JWindow;
 import javax.swing.WindowConstants;
 
@@ -30,9 +34,16 @@ public class SplashScreenSample {
         frame.setSize(800, 600);
         frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
         //init the JWindow, add component to its content pane
-        JWindow window=null;
-        ImageIcon icon=new ImageIcon(new URL("https://i.ytimg.com/vi/ND6a4V-xdjI/hqdefault.jpg"));
-        
+        JWindow window=new JWindow();
+        File file=new File("1.gif");
+        ImageIcon icon=new ImageIcon(file.toURI().toURL()));
+        window.setLayout(new BorderLayout());
+        window.getContentPane().add(new JLabel(icon));
+        window.setSize(500, 500);
+        window.setLocationRelativeTo(null);
+        JProgressBar progressBar=new JProgressBar();
+        progressBar.setIndeterminate(true);
+        window.getContentPane().add(progressBar, "South");
         //////////////////////////////////////////////////////
         
         Thread t=new Thread(){
